--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
 asgiref==3.5.2
+dj-database-url==0.5.0
 Django==4.0.4
+django-heroku==0.3.1
 emoji==1.6.3
 numpy==1.22.3
+psycopg2==2.9.3
 PyQt6==6.3.0
 PyQt6-Qt6==6.3.0
 PyQt6-sip==13.3.1
 sqlparse==0.4.2
 tzdata==2022.1
+whitenoise==6.2.0
