--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,22 @@
 asgiref==3.5.2
+certifi==2022.6.15
+charset-normalizer==2.1.0
 dj-database-url==0.5.0
 Django==4.0.4
 django-heroku==0.3.1
 django-on-heroku==1.1.2
+djangorestframework==3.13.1
 emoji==1.6.3
+idna==3.3
 numpy==1.22.3
 psycopg2==2.9.3
 psycopg2-binary==2.9.3
 PyQt6==6.3.0
 PyQt6-Qt6==6.3.0
 PyQt6-sip==13.3.1
+pytz==2022.1
+requests==2.28.1
 sqlparse==0.4.2
 tzdata==2022.1
+urllib3==1.26.10
 whitenoise==6.2.0
